--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
 title: Zainab Agha
 email: zainabagha@sfsu.edu
-description: Assistant Professor, HCI | Social Computing | Online Safety | UX Research
+description: 'Assistant Professor at San Francisco State University. Research: HCI,
+  Online Safety, Social Computing, UX.'
 baseurl: ''
 url: https://zainabagha.github.io
 scholar_userid: TV1xodIAAAAJ
-twitter_username: ''
-github_username: zainabagha
 minimal_mistakes_skin: default
 markdown: kramdown
