--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -12,7 +12,8 @@
   authors: Agha, Z., Ali, N. S., Park, J., Wisniewski, P. J.
   venue: IJCCI 2024
   year: 2024
-- title: 'Tricky vs. Transparent: Towards an Ecologically Valid...'
+- title: 'Tricky vs. Transparent: Towards an Ecologically Valid and Safe Approach
+    for Evaluating Online Safety Nudges for Teens'
   authors: Agha, Z., Park, J., Wan R., Ali, N., Wang, Y., DiFranzo, D., Badillo-Urquiola,
     K., Wisniewski, P.
   venue: CHI 2024 (In Press)
