--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,9 @@
-- title: About
-  url: /about/
-- title: Publications
-  url: /publications/
-- title: CV
-  url: /cv/
-- title: Contact
-  url: /contact/
+main:
+  - title: About
+    url: /about/
+  - title: Publications
+    url: /publications/
+  - title: CV
+    url: /cv/
+  - title: Contact
+    url: /contact/
